Fix alignment for mobile devices.

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,8 +23,8 @@ h1 {
   -webkit-box-shadow: 0px 0px 25px 15px #fff;
           box-shadow: 0px 0px 25px 15px #fff;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-          position: absolute;
+  box-sizing: border-box;
+  position: absolute;
   top:0;
   bottom: 0;
   left: 0;
@@ -297,20 +297,24 @@ header {
 
 @media (max-width: 768px) {
   body {
+    background: #ffffff;
     -webkit-transform: rotate(90deg);
         -ms-transform: rotate(90deg);
             transform: rotate(90deg);
   }
 
   .content {
-    zoom: 1.15;
-    -ms-zoom: 1.15;
-    -webkit-zoom: 1.15;
+    zoom: 1.17;
+    -ms-zoom: 1.17;
+    -webkit-zoom: 1.17;
     height: 232.5px;
-    width: 586px;
-    left: 135px;
+    width: 590px;
     border: solid black 12px;
     border-radius: 25px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    right: 50%;
   }
 
   @-moz-document url-prefix() {
